# MaCh3_DUNE

./: CMakeLists.txt  ICGPU_local_new.sh  build.sh  setup_dune_env.sh
configs/: EventRates_Beam.yaml  SamplePDFDune_FHC_nueselec.yaml  SamplePDFDune_FHC_numuselec.yaml  SamplePDFDune_ND_test.yaml  SamplePDFDune_RHC_nueselec.yaml  SamplePDFDune_RHC_numuselec.yaml  mach3dune_config.yaml
configs/CovObjs/: OscCov_PDG2021_v2.yaml
inputs/: pd_link_files.sh
samplePDFDUNE/: CMakeLists.txt  StructsDUNE.h  samplePDFDUNEBase.cpp  samplePDFDUNEBase.h  samplePDFDUNENDBase.cpp  samplePDFDUNENDBase.h
src/: CMakeLists.txt  SamplePDFDUNE_NDTest.cpp  jointFitDUNE.cpp
utils/: DUNE_flux_systs.xml
